[package]
name = "test-programs"
version = "0.19.0"
authors = ["The Wasmtime Project Developers"]
readme = "README.md"
edition = "2018"
publish = false
license = "Apache-2.0 WITH LLVM-exception"

[build-dependencies]
cfg-if = "1.0"

[dev-dependencies]
wasmtime = { path = "../wasmtime", version = "0.29.0" }
target-lexicon = "0.12.0"
tempfile = "3.1.0"
tokio = { version = "1.8.0", features = ["rt-multi-thread"] }

[features]
test_programs = []
